Fix vertical-align in shadow DOM mode
- Closes #41

--- a/assets/scss/buttons.scss
+++ b/assets/scss/buttons.scss
@@ -212,6 +212,8 @@ a {
 }
 
 :host {
+  display: inline-block;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-size: 0;
   white-space: nowrap;
@@ -225,4 +227,3 @@ a {
     vertical-align: bottom;
   }
 }
-
